--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
     <head>
+		<link rel="stylesheet" type="text/css" href="/design.css"/>
+
     </head>
     <body>
 		<h1>Projeto do Joao Silva Fonseca</h1>
