--- a/proposta_1.html
+++ b/proposta_1.html
@@ -1,13 +1,13 @@
 <html>
   <head>
-    <title>Proposta um para homepage da empresa</title>
+    <title>Proposta 1 para homepage da empresa</title>
   </head>
   <body>
     <h1>
 		Decidir titulo
 	</h1>
     <div>
-      Conteudo do site
+      Decidir conteudo
     </div>
     <h1>
 		Decidir rodape
